# goit-pythonweb-hw-01

./: pattern_factory.py  pyproject.toml  solid.py
