[tool.poetry]
name = "goit-pythonweb-hw-01"
version = "0.1.0"
description = ""
authors = ["Dmytro Lyfenko <d.lyfenko@gmail.com>"]
readme = "README.md"
packages = [{include = "goit_pythonweb_hw_01"}]

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
